[package]
name = "fore-rsx"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
fore-frontend = { path = "../fore-frontend", version = "0.1.0-alpha" }
proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
quote = "1.0"